--- a/src/pages/styles/Renta.css
+++ b/src/pages/styles/Renta.css
@@ -19,3 +19,16 @@
   justify-content: space-around; */
   max-width: 40%;
 }
+
+@media screen and (max-device-width:700px){
+
+  .Renta__container{
+    display: grid;
+    margin-top: 20%;
+  }
+
+  .Renta__section {
+    max-width: fit-content;
+  }
+
+}
